# shadowpool

./: .gitignore  AUDIT_RESPONSE.md  Anchor.toml  Arcium.toml  CLAUDE.md  Cargo.toml  README.md  WHITEPAPER.md  package.json  tsconfig.json  vercel.json
.github/workflows/: ci.yml
app/: .env.example  README.md  next.config.ts  package-lock.json  package.json
app/src/app/: globals.css  icon.tsx  layout.tsx  opengraph-image.tsx  page.tsx  twitter-image.tsx
app/src/components/: ConnectButton.tsx
app/src/hooks/: index.ts  useComputeQuotes.ts  useComputeQuotesMpc.ts  useCreateVault.ts  useDeposit.ts  useEmergencyOverride.ts  useInitializeStrategy.ts  useProgramEvents.ts  useQuotes.ts  useRevealPerformance.ts  useTokenBalance.ts  useUpdateStrategy.ts  useVault.ts  useVaultReadOnly.ts  useWithdraw.ts
app/src/idl/: shadowpool.json  shadowpool.ts
app/src/lib/: _empty-module.ts  arcium-helpers.ts  arcium-pdas.ts  constants.ts  program.ts  units.ts
crates/shadowpool-math/: Cargo.toml
crates/shadowpool-math/src/: lib.rs
encrypted-ixs/: Cargo.toml
encrypted-ixs/src/: lib.rs
programs/shadowpool/: Cargo.toml
programs/shadowpool/fuzz/: Cargo.toml  REPORT.md
programs/shadowpool/fuzz/fuzz_targets/: fuzz_compute_expected_amount_out.rs  fuzz_compute_safety_floor.rs  fuzz_validate_and_normalize_price.rs
scripts/: _attempt-init-devnet.ts  _inspect-vault.ts  _simulate_init_strategy.mjs  check-devnet-state.ts  close-stale-vault.ts  emergency-override-devnet.ts  init-vault-devnet.ts  setup-devnet.ts  upload-circuits-devnet.ts
tests/: README.md  shadowpool.ts
(+28 files in other folders)
